# Notification_System

./: README.md  pyproject.toml
app/: dependencies.py  main.py
app/api/: notification_router.py  system_router.py  template_router.py
app/models/: database.py  model.py  pydantic_models.py  schemas.py  types.py
app/services/: auth_service.py  key_service.py  notification_service.py  template_services.py
app/template_engine/: jinja.py
app/utils/: exceptions.py  response.py
migrations/: env.py
migrations/versions/: 2f155303be63_updated_database_tables.py  91c0f1d2e581_added_forign_id_to_template_table_for_.py  921f9c2a8909_added_unique_to_api_table_name.py  c1489dbfd7f1_chnaged_template_table.py  cf1d3357f345_updated_notification_table.py  dae2bd0fa1f0_updated_template_table.py  ed216bfa52cf_fix_notification_table_partial_index.py
